Have configure substitute compiler flags in makefile. Use opendisk() from libutil to open device when available.

--- a/common.mk.in
+++ b/common.mk.in
@@ -1,8 +1,9 @@
-CC           = cc
-CFLAGS       = -g -Wall -Werror
+# -*-Makefile-*-
+CC           = @CC@
+CFLAGS       = @CFLAGS@ @CPPFLAGS@ @DEFS@
 DEPFLAGS     = -MM
-LDFLAGS      = 
-LIBS         = 
+LDFLAGS      = @LDFLAGS@
+LIBS         = @LIBS@
 
 ALL_PROGS     = upart
 ALL_SRCS      = ${UPART_SRCS}
