--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,12 @@
 AC_INIT
 AC_PREREQ([2.52])
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_FILES([common.mk])
+
+if test -z "$CFLAGS"
+then
+    CFLAGS="-g -Wall -Werror"
+fi
 
 dnl ugh, we should test if _GNU_SOURCE is needed instead of using it everywhere
 AC_DEFINE([_GNU_SOURCE])
@@ -11,7 +17,7 @@ dnl check for crap needed for 64-bit off_t and such
 AC_SYS_LARGEFILE
 
 dnl some standard headers
-AC_CHECK_HEADERS([sys/types.h stdint.h inttypes.h])
+AC_CHECK_HEADERS([sys/types.h sys/param.h stdint.h inttypes.h])
 
 dnl bsd disklabel headers
 AC_CHECK_HEADERS([sys/disklabel.h])
@@ -20,6 +26,11 @@ AC_CHECK_HEADERS([sys/dkio.h],,,
 #ifdef HAVE_SYS_DISKLABEL_H
 #include <sys/disklabel.h>
 #endif])
+
+dnl look for opendisk() in libutil
+AC_SEARCH_LIBS([opendisk], [util],
+[AC_CHECK_HEADERS([util.h])
+AC_DEFINE([HAVE_OPENDISK])])
 
 AC_OUTPUT
 
