--- a/common.mk.in
+++ b/common.mk.in
@@ -8,7 +8,7 @@ LIBS         = @LIBS@
 ALL_PROGS     = upart
 ALL_SRCS      = ${UPART_SRCS}
 ALL_HDRS      = ${UPART_HDRSRC:=.h}
-UPART_SRCS    = ${UPART_HDRSRC:=.c} main.c
+UPART_SRCS    = ${UPART_HDRSRC:=.c} main.c mbr_names.c
 UPART_HDRSRC  = disk mbr util
 
 UPART_OBJS    = ${UPART_SRCS:.c=.o}
