--- a/common.mk.in
+++ b/common.mk.in
@@ -7,7 +7,7 @@ LIBS         = @LIBS@
 
 ALL_PROGS     = upart
 ALL_SRCS      = ${UPART_SRCS}
-ALL_HDRS      = ${UPART_HDRSRC:=.h}
+ALL_HDRS      = ${UPART_HDRSRC:=.h} bsdqueue.h
 UPART_SRCS    = ${UPART_HDRSRC:=.c} main.c mbr_names.c
 UPART_HDRSRC  = disk mbr util
 
