--- a/configure.ac
+++ b/configure.ac
@@ -32,6 +32,9 @@ AC_SEARCH_LIBS([opendisk], [util],
 [AC_CHECK_HEADERS([util.h])
 AC_DEFINE([HAVE_OPENDISK])])
 
+dnl some linux headers
+AC_CHECK_HEADERS([linux/fs.h linux/hdreg.h])
+
 AC_OUTPUT
 
 cat <<EOF
