--- a/config.h.in
+++ b/config.h.in
@@ -25,6 +25,9 @@
 #undef HAVE_LINUX_FS_H
 #undef HAVE_LINUX_HDREG_H
 
+/* strlcat() */
+#undef HAVE_STRLCAT
+
 /* it's kind of bogus to include these here but I'd rather not look at
    this ugly mess of #ifdefs at the top of every single file */
 #ifdef HAVE_SYS_TYPES_H
