--- a/config.h.in
+++ b/config.h.in
@@ -28,7 +28,8 @@
 #undef HAVE_LINUX_FS_H
 #undef HAVE_LINUX_HDREG_H
 
-/* strlcat() */
+/* sane string functions */
+#undef HAVE_STRLCPY
 #undef HAVE_STRLCAT
 
 /* it's kind of bogus to include these here but I'd rather not look at
