--- a/config.h.in
+++ b/config.h.in
@@ -2,6 +2,9 @@
 #ifndef HDR_UP_CONFIG
 #define HDR_UP_CONFIG
 
+#undef PACKAGE_NAME
+#undef PACKAGE_VERSION
+
 /* linux is great */
 #undef _GNU_SOURCE
 #undef _FILE_OFFSET_BITS
