--- a/common.mk.in
+++ b/common.mk.in
@@ -20,6 +20,8 @@ ALL_HDRS      = ${UPART_HDRSRC:=.h} bsdqueue.h
 UPART_SRCS    = ${UPART_HDRSRC:=.c} main.c
 UPART_HDRSRC  = apm bsdlabel crc32 disk gpt img map mbr os \
 		sunlabel-shared sunlabel-sparc sunlabel-x86 util
+REGRESS_DIR   = regression-tests
+REGRESS_CMD   = sh ./test.sh
 
 UPART_OBJS    = ${UPART_SRCS:.c=.o}
 ALL_OBJS      = ${ALL_SRCS:.c=.o}
@@ -42,6 +44,7 @@ upart: ${UPART_OBJS}
 
 clean:
 	rm -f .depend ${ALL_PROGS} ${ALL_OBJS}
+	cd ${REGRESS_DIR} && env UPART_TEST_CLEAN=y ${REGRESS_CMD}
 
 cleaner: clean
 	rm -f config.cache config.h config.log config.status
@@ -50,4 +53,4 @@ cleanest: cleaner
 	rm -f configure
 
 test tests regress regression: ${ALL_PROGS}
-	cd regression-tests && sh ./test.sh
+	cd ${REGRESS_DIR} && ${REGRESS_CMD}
