Add readline support and a stub for an interactive mode.

--- a/configure.ac
+++ b/configure.ac
@@ -4,10 +4,19 @@ AC_PREREQ([2.60])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([common.mk])
 
+dnl default to some sane CFLAGS
 if test -z "$CFLAGS"
 then
     CFLAGS="-g -Wall -Werror -O"
 fi
+
+dnl check for --with-readline option
+readline_enabled=yes
+readline_prefix=
+AC_ARG_WITH([readline],
+            [  --with-readline         use readline for interactive mode],
+            [],
+            [with_readline=check])
 
 dnl ugh, we should test if _GNU_SOURCE is needed instead of using it everywhere
 AC_DEFINE([_GNU_SOURCE])
@@ -43,6 +52,31 @@ AC_CHECK_HEADERS([linux/fs.h linux/hdreg.h])
 
 dnl look for sane string functions
 AC_CHECK_FUNCS([strlcpy strlcat])
+
+dnl try to find readline unless instructed otherwise
+if test xno != x"$with_readline"
+then
+    AC_SEARCH_LIBS(tgetent, [termcap tinfo curses ncurses])
+    if test xno = x"$ac_cv_search_tgetent"
+    then
+        if test xcheck != x"$with_readline"
+        then
+            AC_MSG_ERROR([failed to find termcap library, needed by readline])
+        fi
+    else
+        AC_SEARCH_LIBS([readline], [readline])
+        if test xno = x"$ac_cv_search_readline"
+        then
+            if test xcheck != x"$with_readline"
+            then
+                AC_ERROR([failed to find readline])
+            fi
+            # XXX should probably remove termcap lib here
+        else
+            AC_DEFINE([HAVE_READLINE])
+        fi
+    fi
+fi
 
 AC_OUTPUT
 
