--- a/common.mk.in
+++ b/common.mk.in
@@ -18,7 +18,7 @@ ALL_PROGS     = upart
 ALL_SRCS      = ${UPART_SRCS}
 ALL_HDRS      = ${UPART_HDRSRC:=.h} bsdqueue.h
 UPART_SRCS    = ${UPART_HDRSRC:=.c} main.c
-UPART_HDRSRC  = apm bsdlabel crc32 disk gpt img map mbr os \
+UPART_HDRSRC  = apm bsdlabel crc32 disk gpt img interactive map mbr os \
 		sunlabel-shared sunlabel-sparc sunlabel-x86 util
 REGRESS_DIR   = regression-tests
 REGRESS_CMD   = sh ./test.sh
