--- a/config.h.in
+++ b/config.h.in
@@ -35,6 +35,9 @@
 #undef HAVE_STRLCPY
 #undef HAVE_STRLCAT
 
+/* readline */
+#undef HAVE_READLINE
+
 /* it's kind of bogus to include these here but I'd rather not look at
    this ugly mess of #ifdefs at the top of every single file */
 #ifdef HAVE_SYS_TYPES_H
