--- a/common.mk.in
+++ b/common.mk.in
@@ -57,5 +57,5 @@ cleanest: cleaner
 test tests regress regression: ${ALL_PROGS}
 	cd ${REGRESS_DIR} && ${REGRESS_CMD}
 
-regen-tests:
+regen-tests: ${ALL_PROGS}
 	cd ${REGRESS_DIR} && env UPART_TEST_REGEN=y ${REGRESS_CMD}
