Minor makefile cleanups.

--- a/common.mk.in
+++ b/common.mk.in
@@ -28,7 +28,8 @@ REGRESS_CMD   = sh ./test.sh
 UPART_OBJS    = ${UPART_SRCS:.c=.o}
 ALL_OBJS      = ${ALL_SRCS:.c=.o}
 
-.PHONY: all clean
+.PHONY: all clean clean-tests cleaner cleanest test tests \
+	regress regression regen-tests
 
 all: ${ALL_PROGS}
 
@@ -39,10 +40,7 @@ install: all
 	${INSTALL_DATA} upart.8 ${DESTDIR}${mandir}/man8
 
 upart: ${UPART_OBJS}
-	${CC} ${CFLAGS} ${LDFLAGS} ${LIBS} -o $@ ${UPART_OBJS}
-
-.c.o:
-	${CC} ${CFLAGS} -c -o $@ $<
+	${CC} ${LDFLAGS} ${LIBS} -o $@ ${UPART_OBJS}
 
 clean: clean-tests
 	rm -f .depend ${ALL_PROGS} ${ALL_OBJS}
@@ -51,7 +49,7 @@ clean-tests:
 	cd ${REGRESS_DIR} && env UPART_TEST_CLEAN=y ${REGRESS_CMD}
 
 cleaner: clean
-	rm -f config.cache config.h config.log config.status
+	rm -f config.cache config.h config.log config.status common.mk
 
 cleanest: cleaner
 	rm -f configure
