Instead of hardcoding a gcc flag for generating makefile dependencies, default to gcc flag but check for other compilers first (currently just sunpro)

--- a/common.mk.in
+++ b/common.mk.in
@@ -3,7 +3,7 @@
 
 CC           = @CC@
 CFLAGS       = @CFLAGS@ @CPPFLAGS@ @DEFS@
-DEPFLAGS     = -MM
+DEPFLAGS     = @CC_MKDEP_FLAGS@
 LDFLAGS      = @LDFLAGS@
 LIBS         = @LIBS@
 prefix       = @prefix@
