Implement device listing via hw.disknames sysctl. Bump version to 0.1.7

--- a/config.h.in
+++ b/config.h.in
@@ -31,6 +31,10 @@
 #undef HAVE_LINUX_FS_H
 #undef HAVE_LINUX_HDREG_H
 
+/* sysctl */
+#undef HAVE_SYS_SYSCTL_H
+#undef HAVE_SYSCTL
+
 /* sane string functions */
 #undef HAVE_STRLCPY
 #undef HAVE_STRLCAT
