--- a/config.h.in
+++ b/config.h.in
@@ -35,6 +35,12 @@
 #undef HAVE_SYS_SYSCTL_H
 #undef HAVE_SYSCTL
 
+/* osx */
+#undef HAVE_COREFOUNDATION_COREFOUNDATION_H
+#undef HAVE_IOKIT_IOKITLIB_H
+#undef HAVE_IOKIT_IOBSD_H
+#undef HAVE_IOKIT_STORAGE_IOMEDIA_H
+
 /* sane string functions */
 #undef HAVE_STRLCPY
 #undef HAVE_STRLCAT
