--- a/config.h.in
+++ b/config.h.in
@@ -31,6 +31,7 @@
 /* libutil, for opendisk() */
 #undef HAVE_UTIL_H
 #undef HAVE_OPENDISK
+#undef HAVE_OPENDEV
 
 /* linux disk ioctls */
 #undef HAVE_LINUX_FS_H
