--- a/configure.ac
+++ b/configure.ac
@@ -18,7 +18,11 @@ dnl check for crap needed for 64-bit off_t and such
 AC_SYS_LARGEFILE
 
 dnl some standard headers
-AC_CHECK_HEADERS([sys/types.h sys/param.h stdint.h inttypes.h])
+AC_CHECK_HEADERS([sys/types.h sys/param.h sys/ioctl.h sys/stat.h dirent.h \
+		  inttypes.h stdint.h unistd.h])
+
+dnl some standard functions
+AC_CHECK_FUNCS([getopt pread])
 
 dnl bsd disklabel headers
 AC_CHECK_HEADERS([sys/disklabel.h])
