--- a/common.mk.in
+++ b/common.mk.in
@@ -19,8 +19,8 @@ MKDIR_P      = @MKDIR_P@
 ALL_PROGS     = upart
 ALL_SRCS      = ${UPART_SRCS}
 ALL_HDRS      = ${UPART_HDRSRC:=.h} bsdqueue.h os-private.h
-UPART_SRCS    = ${UPART_HDRSRC:=.c} main.c \
-		os-bsd.c os-darwin.c os-haiku.c os-linux.c os-solaris.c
+UPART_SRCS    = ${UPART_HDRSRC:=.c} main.c os-bsd.c os-darwin.c os-haiku.c \
+		os-linux.c os-solaris.c os-unix.c
 UPART_HDRSRC  = apm bsdlabel crc32 disk gpt img map mbr os \
 		sunlabel-shared sunlabel-sparc sunlabel-x86 util
 REGRESS_DIR   = tests
