--- a/configure.ac
+++ b/configure.ac
@@ -1,3 +1,5 @@
+dnl Don't forget to update the version in config-win.h too, as well as
+dnl tag the commit where configure is regenerated.
 AC_INIT([upart], [0.2.5])
 dnl need 2.60 for AC_PROG_MKDIR_P
 AC_PREREQ([2.60])
