Rename and move the macro to tell windows from unix.

--- a/config.h.in
+++ b/config.h.in
@@ -5,6 +5,8 @@
 #undef PACKAGE_NAME
 #undef PACKAGE_VERSION
 
+#undef OS_TYPE_UNIX
+
 /* linux is great */
 #undef _GNU_SOURCE
 #undef _FILE_OFFSET_BITS
