--- a/config.h.in
+++ b/config.h.in
@@ -17,6 +17,7 @@
 #undef HAVE_SYS_PARAM_H
 #undef HAVE_SYS_IOCTL_H
 #undef HAVE_SYS_STAT_H
+#undef HAVE_SYS_WAIT_H
 #undef HAVE_DIRENT_H
 #undef HAVE_ERRNO_H
 #undef HAVE_FCNTL_H
